public-scss/style.scss
@use '../node_modules/@cityssm/bulma-webapp-css/cityssm.min.css';
@import '../node_modules/bulma/sass/utilities/derived-variables.sass';

$white: #fff;
$black: #000;

.is-linethrough {
  text-decoration: line-through;
}

.has-width-10 {
  width: 10px;
}

.has-min-page-height {
  min-height: 100vh;
}

/*
 * Status containers
 */

.has-status-loaded .is-hidden-status-loaded,
.has-status-loading .is-hidden-status-loading,
.has-status-view .is-hidden-status-view,
fieldset:enabled .is-hidden-enabled {
  display: none;
}

.has-status-view .is-noninteractive-status-view {
  pointer-events: none;
}

// to fix page titles inside level components, set on .level-left

.has-flex-shrink-1 {
  flex-shrink: 1;
}

.has-border-radius-3 {
  border-radius: 3px;
}

/*
 * Tabs
 */

.tab-content {
  display: none;

  &.is-active {
    display: block;
  }
}

#is-login-page {
  overflow: auto;
  background-position: top center;
  background-size: cover;

  body > .columns {
    min-height: 100vh;
  }
}

.button.is-xsmall {
  height: 2em;
  padding-top: 0;
  padding-bottom: 0;
  font-size: 0.75rem;
}

/*
 * Print
 */

.container.is-page {
  width: 8.5in;
  padding: 10px 20px 20px;
  margin: 20px auto;
  background-color: $white;
  border: 1px solid $black;

  @media print {
    width: 100%;
    padding: 0;
    border: 0;
  }
}

/*
 * SVG
 */

.image svg {
  display: block;
  height: auto;
  width: 100%;

  .highlight,
  .highlight path {

    &.is-danger {
      fill: $danger-light;
    }
    
    &.is-success {
      fill: $success-light;
    }
  }

  text {
    user-select: none;
  }
}

/*
 * "Readonly" selects
 */

.select option:disabled {
  display: none;
}

 /*
  * Modal Size Fix
  */

.modal-card {
  max-width: 100%;
}

/*
 * Accessibility
 */

$black-ter: hsl(0, 0%, 14%);

.control .button.is-static,
.menu .menu-label {
  color: $black-ter;
}

